--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: node_js
 sudo: false
+dist: trusty
 before_install:
   - echo "Installing libvips..."
-  - sudo add-apt-repository -y ppa:lovell/precise-backport-vips
+  - sudo add-apt-repository -y ppa:lovell/trusty-backport-vips
   - sudo apt-get update
   - sudo apt-get install -y libvips-dev
 env:
